<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format2.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cmd_bridge</name>
  <version>0.0.1</version>
  <description>
    This package provides a bridge between ROS and ROS2 for the
    command interface.
  </description>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>

  <test_depend>rospy</test_depend>
  <export></export>
</package>
