<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_bridge</name>
  <version>0.0.1</version>
  <description>
    This package provides a bridge between ROS and ROS2 for the
    command interface.
  </description>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
